@@ -58,8 +58,8 @@ public class BenchmarkTest00182 extends HttpServlet {
 		map48649.put("key48649", b48649.toString()); // put in a collection
 		String c48649 = (String)map48649.get("key48649"); // get it back out
 		String d48649 = c48649.substring(0,c48649.length()-1); // extract most of it
-		String e48649 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d48649.getBytes() ) )); // B64 encode and decode it
+		String e48649 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d48649.getBytes() ) )); // B64 encode and decode it
 		String f48649 = e48649.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g48649 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
