@@ -58,8 +58,8 @@ public class BenchmarkTest00189 extends HttpServlet {
 		map14330.put("key14330", b14330.toString()); // put in a collection
 		String c14330 = (String)map14330.get("key14330"); // get it back out
 		String d14330 = c14330.substring(0,c14330.length()-1); // extract most of it
-		String e14330 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d14330.getBytes() ) )); // B64 encode and decode it
+		String e14330 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d14330.getBytes() ) )); // B64 encode and decode it
 		String f14330 = e14330.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g14330 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
