@@ -67,8 +67,8 @@ public class BenchmarkTest00220 extends HttpServlet {
 		map25969.put("key25969", b25969.toString()); // put in a collection
 		String c25969 = (String)map25969.get("key25969"); // get it back out
 		String d25969 = c25969.substring(0,c25969.length()-1); // extract most of it
-		String e25969 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d25969.getBytes() ) )); // B64 encode and decode it
+		String e25969 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d25969.getBytes() ) )); // B64 encode and decode it
 		String f25969 = e25969.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g25969 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
