@@ -60,8 +60,8 @@ public class BenchmarkTest00261 extends HttpServlet {
 		map3000.put("key3000", b3000.toString()); // put in a collection
 		String c3000 = (String)map3000.get("key3000"); // get it back out
 		String d3000 = c3000.substring(0,c3000.length()-1); // extract most of it
-		String e3000 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d3000.getBytes() ) )); // B64 encode and decode it
+		String e3000 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d3000.getBytes() ) )); // B64 encode and decode it
 		String f3000 = e3000.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g3000 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
