@@ -60,8 +60,8 @@ public class BenchmarkTest00275 extends HttpServlet {
 		map28150.put("key28150", b28150.toString()); // put in a collection
 		String c28150 = (String)map28150.get("key28150"); // get it back out
 		String d28150 = c28150.substring(0,c28150.length()-1); // extract most of it
-		String e28150 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d28150.getBytes() ) )); // B64 encode and decode it
+		String e28150 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d28150.getBytes() ) )); // B64 encode and decode it
 		String f28150 = e28150.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g28150 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
