@@ -60,8 +60,8 @@ public class BenchmarkTest00277 extends HttpServlet {
 		map54571.put("key54571", b54571.toString()); // put in a collection
 		String c54571 = (String)map54571.get("key54571"); // get it back out
 		String d54571 = c54571.substring(0,c54571.length()-1); // extract most of it
-		String e54571 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d54571.getBytes() ) )); // B64 encode and decode it
+		String e54571 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d54571.getBytes() ) )); // B64 encode and decode it
 		String f54571 = e54571.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g54571 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
