@@ -60,8 +60,8 @@ public class BenchmarkTest00332 extends HttpServlet {
 		map40477.put("key40477", b40477.toString()); // put in a collection
 		String c40477 = (String)map40477.get("key40477"); // get it back out
 		String d40477 = c40477.substring(0,c40477.length()-1); // extract most of it
-		String e40477 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d40477.getBytes() ) )); // B64 encode and decode it
+		String e40477 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d40477.getBytes() ) )); // B64 encode and decode it
 		String f40477 = e40477.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g40477 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
