@@ -53,8 +53,8 @@ public class BenchmarkTest00367 extends HttpServlet {
 		map12849.put("key12849", b12849.toString()); // put in a collection
 		String c12849 = (String)map12849.get("key12849"); // get it back out
 		String d12849 = c12849.substring(0,c12849.length()-1); // extract most of it
-		String e12849 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d12849.getBytes() ) )); // B64 encode and decode it
+		String e12849 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d12849.getBytes() ) )); // B64 encode and decode it
 		String f12849 = e12849.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g12849 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
