@@ -53,8 +53,8 @@ public class BenchmarkTest00379 extends HttpServlet {
 		map75704.put("key75704", b75704.toString()); // put in a collection
 		String c75704 = (String)map75704.get("key75704"); // get it back out
 		String d75704 = c75704.substring(0,c75704.length()-1); // extract most of it
-		String e75704 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d75704.getBytes() ) )); // B64 encode and decode it
+		String e75704 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d75704.getBytes() ) )); // B64 encode and decode it
 		String f75704 = e75704.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g75704 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
