@@ -53,8 +53,8 @@ public class BenchmarkTest00399 extends HttpServlet {
 		map78565.put("key78565", b78565.toString()); // put in a collection
 		String c78565 = (String)map78565.get("key78565"); // get it back out
 		String d78565 = c78565.substring(0,c78565.length()-1); // extract most of it
-		String e78565 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d78565.getBytes() ) )); // B64 encode and decode it
+		String e78565 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d78565.getBytes() ) )); // B64 encode and decode it
 		String f78565 = e78565.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g78565 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
