@@ -53,8 +53,8 @@ public class BenchmarkTest00427 extends HttpServlet {
 		map70670.put("key70670", b70670.toString()); // put in a collection
 		String c70670 = (String)map70670.get("key70670"); // get it back out
 		String d70670 = c70670.substring(0,c70670.length()-1); // extract most of it
-		String e70670 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d70670.getBytes() ) )); // B64 encode and decode it
+		String e70670 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d70670.getBytes() ) )); // B64 encode and decode it
 		String f70670 = e70670.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f70670); // reflection
