@@ -58,8 +58,8 @@ public class BenchmarkTest00470 extends HttpServlet {
 		map1504.put("key1504", b1504.toString()); // put in a collection
 		String c1504 = (String)map1504.get("key1504"); // get it back out
 		String d1504 = c1504.substring(0,c1504.length()-1); // extract most of it
-		String e1504 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d1504.getBytes() ) )); // B64 encode and decode it
+		String e1504 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d1504.getBytes() ) )); // B64 encode and decode it
 		String f1504 = e1504.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g1504 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
