@@ -56,8 +56,8 @@ public class BenchmarkTest00689 extends HttpServlet {
 		map98281.put("key98281", b98281.toString()); // put in a collection
 		String c98281 = (String)map98281.get("key98281"); // get it back out
 		String d98281 = c98281.substring(0,c98281.length()-1); // extract most of it
-		String e98281 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d98281.getBytes() ) )); // B64 encode and decode it
+		String e98281 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d98281.getBytes() ) )); // B64 encode and decode it
 		String f98281 = e98281.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g98281 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
