@@ -56,8 +56,8 @@ public class BenchmarkTest00725 extends HttpServlet {
 		map49441.put("key49441", b49441.toString()); // put in a collection
 		String c49441 = (String)map49441.get("key49441"); // get it back out
 		String d49441 = c49441.substring(0,c49441.length()-1); // extract most of it
-		String e49441 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d49441.getBytes() ) )); // B64 encode and decode it
+		String e49441 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d49441.getBytes() ) )); // B64 encode and decode it
 		String f49441 = e49441.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f49441); // reflection
