@@ -56,8 +56,8 @@ public class BenchmarkTest00748 extends HttpServlet {
 		map43085.put("key43085", b43085.toString()); // put in a collection
 		String c43085 = (String)map43085.get("key43085"); // get it back out
 		String d43085 = c43085.substring(0,c43085.length()-1); // extract most of it
-		String e43085 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d43085.getBytes() ) )); // B64 encode and decode it
+		String e43085 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d43085.getBytes() ) )); // B64 encode and decode it
 		String f43085 = e43085.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g43085 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
