@@ -67,8 +67,8 @@ public class BenchmarkTest00817 extends HttpServlet {
 		map9795.put("key9795", b9795.toString()); // put in a collection
 		String c9795 = (String)map9795.get("key9795"); // get it back out
 		String d9795 = c9795.substring(0,c9795.length()-1); // extract most of it
-		String e9795 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d9795.getBytes() ) )); // B64 encode and decode it
+		String e9795 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d9795.getBytes() ) )); // B64 encode and decode it
 		String f9795 = e9795.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f9795); // reflection
