@@ -106,8 +106,8 @@ public class BenchmarkTest00978 extends HttpServlet {
 		map60830.put("key60830", b60830.toString()); // put in a collection
 		String c60830 = (String)map60830.get("key60830"); // get it back out
 		String d60830 = c60830.substring(0,c60830.length()-1); // extract most of it
-		String e60830 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d60830.getBytes() ) )); // B64 encode and decode it
+		String e60830 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d60830.getBytes() ) )); // B64 encode and decode it
 		String f60830 = e60830.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g60830 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
