@@ -77,8 +77,8 @@ public class BenchmarkTest01026 extends HttpServlet {
 		map11433.put("key11433", b11433.toString()); // put in a collection
 		String c11433 = (String)map11433.get("key11433"); // get it back out
 		String d11433 = c11433.substring(0,c11433.length()-1); // extract most of it
-		String e11433 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d11433.getBytes() ) )); // B64 encode and decode it
+		String e11433 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d11433.getBytes() ) )); // B64 encode and decode it
 		String f11433 = e11433.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g11433 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
