@@ -124,8 +124,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map85812.put("key85812", b85812.toString()); // put in a collection
 		String c85812 = (String)map85812.get("key85812"); // get it back out
 		String d85812 = c85812.substring(0,c85812.length()-1); // extract most of it
-		String e85812 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d85812.getBytes() ) )); // B64 encode and decode it
+		String e85812 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d85812.getBytes() ) )); // B64 encode and decode it
 		String f85812 = e85812.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f85812); // reflection
