@@ -75,8 +75,8 @@ public class BenchmarkTest01204 extends HttpServlet {
 		map40584.put("key40584", b40584.toString()); // put in a collection
 		String c40584 = (String)map40584.get("key40584"); // get it back out
 		String d40584 = c40584.substring(0,c40584.length()-1); // extract most of it
-		String e40584 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d40584.getBytes() ) )); // B64 encode and decode it
+		String e40584 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d40584.getBytes() ) )); // B64 encode and decode it
 		String f40584 = e40584.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f40584); // reflection
