@@ -63,8 +63,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map23874.put("key23874", b23874.toString()); // put in a collection
 		String c23874 = (String)map23874.get("key23874"); // get it back out
 		String d23874 = c23874.substring(0,c23874.length()-1); // extract most of it
-		String e23874 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d23874.getBytes() ) )); // B64 encode and decode it
+		String e23874 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d23874.getBytes() ) )); // B64 encode and decode it
 		String f23874 = e23874.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f23874); // reflection
