@@ -69,8 +69,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map41908.put("key41908", b41908.toString()); // put in a collection
 		String c41908 = (String)map41908.get("key41908"); // get it back out
 		String d41908 = c41908.substring(0,c41908.length()-1); // extract most of it
-		String e41908 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d41908.getBytes() ) )); // B64 encode and decode it
+		String e41908 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d41908.getBytes() ) )); // B64 encode and decode it
 		String f41908 = e41908.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g41908 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
