@@ -81,8 +81,8 @@ public class BenchmarkTest01393 extends HttpServlet {
 		map57571.put("key57571", b57571.toString()); // put in a collection
 		String c57571 = (String)map57571.get("key57571"); // get it back out
 		String d57571 = c57571.substring(0,c57571.length()-1); // extract most of it
-		String e57571 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d57571.getBytes() ) )); // B64 encode and decode it
+		String e57571 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d57571.getBytes() ) )); // B64 encode and decode it
 		String f57571 = e57571.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g57571 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
