@@ -67,8 +67,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map1207.put("key1207", b1207.toString()); // put in a collection
 		String c1207 = (String)map1207.get("key1207"); // get it back out
 		String d1207 = c1207.substring(0,c1207.length()-1); // extract most of it
-		String e1207 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d1207.getBytes() ) )); // B64 encode and decode it
+		String e1207 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d1207.getBytes() ) )); // B64 encode and decode it
 		String f1207 = e1207.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g1207 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
