@@ -132,8 +132,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map72232.put("key72232", b72232.toString()); // put in a collection
 		String c72232 = (String)map72232.get("key72232"); // get it back out
 		String d72232 = c72232.substring(0,c72232.length()-1); // extract most of it
-		String e72232 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d72232.getBytes() ) )); // B64 encode and decode it
+		String e72232 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d72232.getBytes() ) )); // B64 encode and decode it
 		String f72232 = e72232.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g72232 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
