@@ -109,8 +109,8 @@ public class BenchmarkTest01931 extends HttpServlet {
 		map40465.put("key40465", b40465.toString()); // put in a collection
 		String c40465 = (String)map40465.get("key40465"); // get it back out
 		String d40465 = c40465.substring(0,c40465.length()-1); // extract most of it
-		String e40465 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d40465.getBytes() ) )); // B64 encode and decode it
+		String e40465 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d40465.getBytes() ) )); // B64 encode and decode it
 		String f40465 = e40465.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f40465); // reflection
