@@ -82,8 +82,8 @@ public class BenchmarkTest01961 extends HttpServlet {
 		map99523.put("key99523", b99523.toString()); // put in a collection
 		String c99523 = (String)map99523.get("key99523"); // get it back out
 		String d99523 = c99523.substring(0,c99523.length()-1); // extract most of it
-		String e99523 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d99523.getBytes() ) )); // B64 encode and decode it
+		String e99523 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d99523.getBytes() ) )); // B64 encode and decode it
 		String f99523 = e99523.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g99523 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
