@@ -109,8 +109,8 @@ public class BenchmarkTest01995 extends HttpServlet {
 		map33633.put("key33633", b33633.toString()); // put in a collection
 		String c33633 = (String)map33633.get("key33633"); // get it back out
 		String d33633 = c33633.substring(0,c33633.length()-1); // extract most of it
-		String e33633 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d33633.getBytes() ) )); // B64 encode and decode it
+		String e33633 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d33633.getBytes() ) )); // B64 encode and decode it
 		String f33633 = e33633.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g33633 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
