@@ -150,8 +150,8 @@ e.printStackTrace(response.getWriter());
 		map50268.put("key50268", b50268.toString()); // put in a collection
 		String c50268 = (String)map50268.get("key50268"); // get it back out
 		String d50268 = c50268.substring(0,c50268.length()-1); // extract most of it
-		String e50268 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d50268.getBytes() ) )); // B64 encode and decode it
+		String e50268 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d50268.getBytes() ) )); // B64 encode and decode it
 		String f50268 = e50268.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f50268); // reflection
