@@ -121,8 +121,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map78258.put("key78258", b78258.toString()); // put in a collection
 		String c78258 = (String)map78258.get("key78258"); // get it back out
 		String d78258 = c78258.substring(0,c78258.length()-1); // extract most of it
-		String e78258 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d78258.getBytes() ) )); // B64 encode and decode it
+		String e78258 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d78258.getBytes() ) )); // B64 encode and decode it
 		String f78258 = e78258.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g78258 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
