@@ -61,8 +61,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map64181.put("key64181", b64181.toString()); // put in a collection
 		String c64181 = (String)map64181.get("key64181"); // get it back out
 		String d64181 = c64181.substring(0,c64181.length()-1); // extract most of it
-		String e64181 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d64181.getBytes() ) )); // B64 encode and decode it
+		String e64181 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d64181.getBytes() ) )); // B64 encode and decode it
 		String f64181 = e64181.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f64181); // reflection
