@@ -61,8 +61,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map95930.put("key95930", b95930.toString()); // put in a collection
 		String c95930 = (String)map95930.get("key95930"); // get it back out
 		String d95930 = c95930.substring(0,c95930.length()-1); // extract most of it
-		String e95930 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d95930.getBytes() ) )); // B64 encode and decode it
+		String e95930 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d95930.getBytes() ) )); // B64 encode and decode it
 		String f95930 = e95930.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g95930 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
