@@ -61,8 +61,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map32743.put("key32743", b32743.toString()); // put in a collection
 		String c32743 = (String)map32743.get("key32743"); // get it back out
 		String d32743 = c32743.substring(0,c32743.length()-1); // extract most of it
-		String e32743 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d32743.getBytes() ) )); // B64 encode and decode it
+		String e32743 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d32743.getBytes() ) )); // B64 encode and decode it
 		String f32743 = e32743.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f32743); // reflection
