@@ -110,8 +110,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map66015.put("key66015", b66015.toString()); // put in a collection
 		String c66015 = (String)map66015.get("key66015"); // get it back out
 		String d66015 = c66015.substring(0,c66015.length()-1); // extract most of it
-		String e66015 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d66015.getBytes() ) )); // B64 encode and decode it
+		String e66015 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d66015.getBytes() ) )); // B64 encode and decode it
 		String f66015 = e66015.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f66015); // reflection
