@@ -122,8 +122,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map55770.put("key55770", b55770.toString()); // put in a collection
 		String c55770 = (String)map55770.get("key55770"); // get it back out
 		String d55770 = c55770.substring(0,c55770.length()-1); // extract most of it
-		String e55770 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d55770.getBytes() ) )); // B64 encode and decode it
+		String e55770 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d55770.getBytes() ) )); // B64 encode and decode it
 		String f55770 = e55770.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f55770); // reflection
