@@ -63,8 +63,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map53479.put("key53479", b53479.toString()); // put in a collection
 		String c53479 = (String)map53479.get("key53479"); // get it back out
 		String d53479 = c53479.substring(0,c53479.length()-1); // extract most of it
-		String e53479 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d53479.getBytes() ) )); // B64 encode and decode it
+		String e53479 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d53479.getBytes() ) )); // B64 encode and decode it
 		String f53479 = e53479.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f53479); // reflection
