@@ -98,8 +98,8 @@ public class BenchmarkTest02477 extends HttpServlet {
 		map40743.put("key40743", b40743.toString()); // put in a collection
 		String c40743 = (String)map40743.get("key40743"); // get it back out
 		String d40743 = c40743.substring(0,c40743.length()-1); // extract most of it
-		String e40743 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d40743.getBytes() ) )); // B64 encode and decode it
+		String e40743 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d40743.getBytes() ) )); // B64 encode and decode it
 		String f40743 = e40743.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g40743 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
