@@ -128,8 +128,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map80801.put("key80801", b80801.toString()); // put in a collection
 		String c80801 = (String)map80801.get("key80801"); // get it back out
 		String d80801 = c80801.substring(0,c80801.length()-1); // extract most of it
-		String e80801 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d80801.getBytes() ) )); // B64 encode and decode it
+		String e80801 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d80801.getBytes() ) )); // B64 encode and decode it
 		String f80801 = e80801.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f80801); // reflection
