@@ -88,8 +88,8 @@ public class BenchmarkTest02652 extends HttpServlet {
 		map25323.put("key25323", b25323.toString()); // put in a collection
 		String c25323 = (String)map25323.get("key25323"); // get it back out
 		String d25323 = c25323.substring(0,c25323.length()-1); // extract most of it
-		String e25323 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d25323.getBytes() ) )); // B64 encode and decode it
+		String e25323 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d25323.getBytes() ) )); // B64 encode and decode it
 		String f25323 = e25323.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g25323 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
