@@ -108,8 +108,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map49179.put("key49179", b49179.toString()); // put in a collection
 		String c49179 = (String)map49179.get("key49179"); // get it back out
 		String d49179 = c49179.substring(0,c49179.length()-1); // extract most of it
-		String e49179 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d49179.getBytes() ) )); // B64 encode and decode it
+		String e49179 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d49179.getBytes() ) )); // B64 encode and decode it
 		String f49179 = e49179.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f49179); // reflection
